tests/NormalTests/paczka1/fuzzy1/15644574.err
Error in line 8: xTQaKbx S942 75,7
Error in line 10: S239 A741 81,9
Error in line 13: S239 S239 28,2
Error in line 24: tDcgcP8v A741 1^5,6
Error in line 26: fVkY0YOe96O A434 10,8
Error in line 30: xTQaKbx A434 50,0
Error in line 33: tDcgcP8v A741 335,1
